--- a/frontend/package.json
+++ b/frontend/package.json
@@ -74,6 +74,7 @@
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
+    "recharts": "^3.7.0",
     "redux-persist": "^6.0.0",
     "shadcn-ui": "^0.9.5",
     "tailwind-merge": "^3.4.1",
